# rust-tensorflow

./: Cargo.toml  README.org  docker-compose.yml  model.py  recommendations.ipynb
saved_model/: saved_model.pb
src/: config.rs  main.rs  utils.rs
