[package]
name = "collab_filtering"
version = "0.1.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-recursion = "0.3.1"
# chrono = "0.4"
env_logger = "0.8.1"
futures = "0.3.5"
log = "0.4.11"
polars = { version = "0.8.1" }
quick-error = "2.0.0"
rayon = "1.5.0"
# tensorflow = { version = "0.16.1", features = ["tensorflow_gpu"] }
tensorflow = { git = "https://github.com/tensorflow/rust", rev = "56b15c3" }
tokio = { version = "0.2.22", features = ["full"] }
# uuid = { version = "0.8", features = ["v4"] }

[[bin]]
name = "recsys"
path = "src/main.rs"
