[package]
name = "collab_filtering"
version = "0.1.0"
authors = ["filip <fbielejec@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.8.1"
# futures = "0.3.5"
log = "0.4.11"
polars = { version = "0.11.1", features = ["simd"] }
quick-error = "2.0.0"
rayon = "1.5.0"
tensorflow = { git = "https://github.com/tensorflow/rust", rev = "56b15c3" }
# tokio = { version = "0.2.22", features = ["full"] }

[[bin]]
name = "recsys"
path = "src/main.rs"
